Revert "Merge branch 'master' of https://github.com/lanstobias/diving-competition"
This reverts commit 65c904dadbf5487b3b993fc7069d9131da3b31b2, reversing
changes made to 276f76691de20f99b5da8e8cb99c26c0a0c78f49.

--- a/simhopp/simhopp.csproj
+++ b/simhopp/simhopp.csproj
@@ -55,6 +55,8 @@
     <Compile Include="models\Contestant.cs" />
     <Compile Include="models\ContestantList.cs" />
     <Compile Include="models\ContestInfo.cs" />
+    <Compile Include="models\Dive.cs" />
+    <Compile Include="models\DiveCode.cs" />
     <Compile Include="models\DiveList.cs" />
     <Compile Include="models\JudgeList.cs" />
     <Compile Include="models\Score.cs" />
