--- a/testsimhopp/packages.config
+++ b/testsimhopp/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MSTest.TestAdapter" version="1.1.18" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.1.18" targetFramework="net461" />
+  <package id="MySql.Data" version="6.10.6" targetFramework="net461" />
 </packages>
