--- a/simhopp/simhopp.csproj
+++ b/simhopp/simhopp.csproj
@@ -78,6 +78,9 @@
     <Compile Include="models\Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="views\PanelView.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <EmbeddedResource Include="ProjectMainWindow.resx">
       <DependentUpon>ProjectMainWindow.cs</DependentUpon>
     </EmbeddedResource>
