Lägg till MainMenuView

--- a/simhopp/simhopp.csproj
+++ b/simhopp/simhopp.csproj
@@ -79,6 +79,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="views\IMainMenuView.cs" />
+    <Compile Include="views\MainMenuView.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="views\PanelView.cs">
       <SubType>Component</SubType>
     </Compile>
