Skapa SubContestBranch klassen
Detta är en contests gren. Vi ville inte använda namnet Event eller
DiveEvent för att undvika potentiell förviring i koden.

--- a/simhopp/simhopp.csproj
+++ b/simhopp/simhopp.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseConnection.cs" />
+    <Compile Include="models\SubContestBranch.cs" />
     <Compile Include="presenters\MainMenuPresenter.cs" />
     <Compile Include="ProjectMainWindow.cs">
       <SubType>Form</SubType>
