--- a/simhopp/simhopp.csproj
+++ b/simhopp/simhopp.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="DatabaseConnection.cs" />
     <Compile Include="models\SubContestBranch.cs" />
+    <Compile Include="models\SubContestBranchList.cs" />
     <Compile Include="presenters\MainMenuPresenter.cs" />
     <Compile Include="ProjectMainWindow.cs">
       <SubType>Form</SubType>
