--- a/simhopp/simhopp.csproj
+++ b/simhopp/simhopp.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseConnection.cs" />
+    <Compile Include="models\ScoreComparer.cs" />
     <Compile Include="models\SubContestBranch.cs" />
     <Compile Include="models\SubContestBranchList.cs" />
     <Compile Include="presenters\MainMenuPresenter.cs" />
