--- a/testsimhopp/testsimhopp.csproj
+++ b/testsimhopp/testsimhopp.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseConnectionTests.cs" />
+    <Compile Include="DiveTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
