--- a/testsimhopp/testsimhopp.csproj
+++ b/testsimhopp/testsimhopp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="DatabaseConnectionTests.cs" />
     <Compile Include="DiveTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SubContestBranchTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
