--- a/testsimhopp/testsimhopp.csproj
+++ b/testsimhopp/testsimhopp.csproj
@@ -67,6 +67,7 @@
     <Compile Include="DiveTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubContestBranchTests.cs" />
+    <Compile Include="TestContest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
