--- a/simhopp/simhopp.csproj
+++ b/simhopp/simhopp.csproj
@@ -88,6 +88,7 @@
     <Compile Include="models\Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="views\ICreateContestView.cs" />
     <Compile Include="views\IMainMenuView.cs" />
     <Compile Include="views\MainMenuView.cs">
       <SubType>UserControl</SubType>
