--- a/simhopp/simhopp.csproj
+++ b/simhopp/simhopp.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="views\ICreateContestView.cs" />
+    <Compile Include="views\ICreateSubContestView.cs" />
     <Compile Include="views\IMainMenuView.cs" />
     <Compile Include="views\MainMenuView.cs">
       <SubType>UserControl</SubType>
