--- a/simhopp/simhopp.csproj
+++ b/simhopp/simhopp.csproj
@@ -88,6 +88,9 @@
     <Compile Include="models\Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="views\CreateContestView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="views\ICreateContestView.cs" />
     <Compile Include="views\ICreateSubContestView.cs" />
     <Compile Include="views\IMainMenuView.cs" />
@@ -115,6 +118,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="views\CreateContestView.resx">
+      <DependentUpon>CreateContestView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="views\MainMenuView.resx">
       <DependentUpon>MainMenuView.cs</DependentUpon>
     </EmbeddedResource>
