Lägg till View CreateSubContestView

--- a/simhopp/simhopp.csproj
+++ b/simhopp/simhopp.csproj
@@ -91,6 +91,9 @@
     <Compile Include="views\CreateContestView.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="views\CreateSubContestView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="views\ICreateContestView.cs" />
     <Compile Include="views\ICreateSubContestView.cs" />
     <Compile Include="views\IMainMenuView.cs" />
@@ -120,6 +123,9 @@
     </Compile>
     <EmbeddedResource Include="views\CreateContestView.resx">
       <DependentUpon>CreateContestView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="views\CreateSubContestView.resx">
+      <DependentUpon>CreateSubContestView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="views\MainMenuView.resx">
       <DependentUpon>MainMenuView.cs</DependentUpon>
