--- a/simhopp/simhopp.csproj
+++ b/simhopp/simhopp.csproj
@@ -67,6 +67,7 @@
     <Compile Include="models\ScoreComparer.cs" />
     <Compile Include="models\SubContestBranch.cs" />
     <Compile Include="models\SubContestBranchList.cs" />
+    <Compile Include="presenters\CreateContestPresenter.cs" />
     <Compile Include="presenters\MainMenuPresenter.cs" />
     <Compile Include="ProjectMainWindow.cs">
       <SubType>Form</SubType>
