--- a/simhopp/simhopp.csproj
+++ b/simhopp/simhopp.csproj
@@ -100,6 +100,9 @@
     <Compile Include="views\ICreateSubContestView.cs" />
     <Compile Include="views\IJudgeDiveView.cs" />
     <Compile Include="views\IMainMenuView.cs" />
+    <Compile Include="views\JudgeDiveView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="views\MainMenuView.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -129,6 +132,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="views\CreateSubContestView.resx">
       <DependentUpon>CreateSubContestView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="views\JudgeDiveView.resx">
+      <DependentUpon>JudgeDiveView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="views\MainMenuView.resx">
       <DependentUpon>MainMenuView.cs</DependentUpon>
