Skapa presentern JudgeDivePresenter

--- a/simhopp/simhopp.csproj
+++ b/simhopp/simhopp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="models\SubContestBranchList.cs" />
     <Compile Include="presenters\CreateContestPresenter.cs" />
     <Compile Include="presenters\CreateSubContestPresenter.cs" />
+    <Compile Include="presenters\JudgeDivePresenter.cs" />
     <Compile Include="presenters\MainMenuPresenter.cs" />
     <Compile Include="ProjectMainWindow.cs">
       <SubType>Form</SubType>
