Skapa Helpers klass

--- a/simhopp/simhopp.csproj
+++ b/simhopp/simhopp.csproj
@@ -70,6 +70,7 @@
     <Compile Include="DatePicker.Designer.cs">
       <DependentUpon>DatePicker.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helpers.cs" />
     <Compile Include="models\ResultDictionary.cs" />
     <Compile Include="models\ScoreComparer.cs" />
     <Compile Include="models\SubContestBranch.cs" />
