--- a/simhopp/simhopp.csproj
+++ b/simhopp/simhopp.csproj
@@ -63,6 +63,7 @@
       <DependentUpon>AddPersonForm.cs</DependentUpon>
     </Compile>
     <Compile Include="CheckDataInput.cs" />
+    <Compile Include="Client.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="DatabaseConnection.cs" />
     <Compile Include="DatePicker.cs">
@@ -72,6 +73,12 @@
       <DependentUpon>DatePicker.cs</DependentUpon>
     </Compile>
     <Compile Include="Helpers.cs" />
+    <Compile Include="LoginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="models\ResultDictionary.cs" />
     <Compile Include="models\ScoreComparer.cs" />
     <Compile Include="models\SubContestBranch.cs" />
@@ -103,7 +110,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="views\AddDiveView.cs">
-      <SubType>UserControl</SubType>
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="views\ContestView.cs">
       <SubType>UserControl</SubType>
