--- a/simhopp/simhopp.csproj
+++ b/simhopp/simhopp.csproj
@@ -56,11 +56,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddPersonForm.cs">
+    <Compile Include="models\PersonList.cs" />
+    <Compile Include="presenters\AddPersonPresenter.cs" />
+    <Compile Include="views\AddPersonView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddPersonForm.Designer.cs">
-      <DependentUpon>AddPersonForm.cs</DependentUpon>
+    <Compile Include="views\AddPersonView.Designer.cs">
+      <DependentUpon>AddPersonView.cs</DependentUpon>
     </Compile>
     <Compile Include="CheckDataInput.cs" />
     <Compile Include="Database.cs" />
@@ -123,6 +125,7 @@
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="views\IAddDiveView.cs" />
+    <Compile Include="views\IAddPersonView.cs" />
     <Compile Include="views\IContestView.cs" />
     <Compile Include="views\ICreateContestView.cs" />
     <Compile Include="views\ICreateSubContestView.cs" />
@@ -140,8 +143,8 @@
     <Compile Include="views\PanelViewControl.Designer.cs">
       <DependentUpon>PanelViewControl.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="AddPersonForm.resx">
-      <DependentUpon>AddPersonForm.cs</DependentUpon>
+    <EmbeddedResource Include="views\AddPersonView.resx">
+      <DependentUpon>AddPersonView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DatePicker.resx">
       <DependentUpon>DatePicker.cs</DependentUpon>
