--- a/simhopp/simhopp.csproj
+++ b/simhopp/simhopp.csproj
@@ -141,6 +141,9 @@
     <Compile Include="views\PanelViewControl.Designer.cs">
       <DependentUpon>PanelViewControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="views\ResultView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <EmbeddedResource Include="AddPersonView.resx">
       <DependentUpon>AddPersonView.cs</DependentUpon>
     </EmbeddedResource>
@@ -182,6 +185,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="views\PanelViewControl.resx">
       <DependentUpon>PanelViewControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="views\ResultView.resx">
+      <DependentUpon>ResultView.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
