--- a/simhopp/simhopp.csproj
+++ b/simhopp/simhopp.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Auth.cs" />
     <Compile Include="models\PersonList.cs" />
     <Compile Include="AddPersonView.cs">
       <SubType>Form</SubType>
