--- a/simhopp/simhopp.csproj
+++ b/simhopp/simhopp.csproj
@@ -124,6 +124,12 @@
     <Compile Include="ServerBrowser.Designer.cs">
       <DependentUpon>ServerBrowser.cs</DependentUpon>
     </Compile>
+    <Compile Include="SettingsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SettingsForm.Designer.cs">
+      <DependentUpon>SettingsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="TCPServer.cs" />
     <Compile Include="views\AddDiveView.cs">
       <SubType>Form</SubType>
@@ -184,6 +190,9 @@
     </Compile>
     <EmbeddedResource Include="ServerBrowser.resx">
       <DependentUpon>ServerBrowser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SettingsForm.resx">
+      <DependentUpon>SettingsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="views\AddDiveView.resx">
       <DependentUpon>AddDiveView.cs</DependentUpon>
