--- a/simhopp/simhopp.csproj
+++ b/simhopp/simhopp.csproj
@@ -59,35 +59,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InputDialog.cs">
+    <Compile Include="Forms\InputDialog.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="InputDialog.Designer.cs">
+    <Compile Include="Forms\InputDialog.Designer.cs">
       <DependentUpon>InputDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="Auth.cs" />
     <Compile Include="models\PersonList.cs" />
-    <Compile Include="AddPersonView.cs">
+    <Compile Include="Forms\AddPersonView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddPersonView.Designer.cs">
+    <Compile Include="Forms\AddPersonView.Designer.cs">
       <DependentUpon>AddPersonView.cs</DependentUpon>
     </Compile>
     <Compile Include="CheckDataInput.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="DatabaseConnection.cs" />
-    <Compile Include="DatePicker.cs">
+    <Compile Include="Forms\DatePicker.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DatePicker.Designer.cs">
+    <Compile Include="Forms\DatePicker.Designer.cs">
       <DependentUpon>DatePicker.cs</DependentUpon>
     </Compile>
     <Compile Include="HandleClient.cs" />
     <Compile Include="Helpers.cs" />
-    <Compile Include="LoginForm.cs">
+    <Compile Include="Forms\LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LoginForm.Designer.cs">
+    <Compile Include="Forms\LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
     <Compile Include="models\ResultDictionary.cs" />
@@ -121,16 +121,16 @@
     <Compile Include="models\Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServerBrowser.cs">
+    <Compile Include="Forms\ServerBrowser.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ServerBrowser.Designer.cs">
+    <Compile Include="Forms\ServerBrowser.Designer.cs">
       <DependentUpon>ServerBrowser.cs</DependentUpon>
     </Compile>
-    <Compile Include="SettingsForm.cs">
+    <Compile Include="Forms\SettingsForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SettingsForm.Designer.cs">
+    <Compile Include="Forms\SettingsForm.Designer.cs">
       <DependentUpon>SettingsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="TCPServer.cs" />
@@ -167,16 +167,16 @@
     <Compile Include="views\ResultView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <EmbeddedResource Include="AddPersonView.resx">
+    <EmbeddedResource Include="Forms\AddPersonView.resx">
       <DependentUpon>AddPersonView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DatePicker.resx">
+    <EmbeddedResource Include="Forms\DatePicker.resx">
       <DependentUpon>DatePicker.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="InputDialog.resx">
+    <EmbeddedResource Include="Forms\InputDialog.resx">
       <DependentUpon>InputDialog.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LoginForm.resx">
+    <EmbeddedResource Include="Forms\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ProjectMainWindow.resx">
@@ -191,10 +191,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ServerBrowser.resx">
+    <EmbeddedResource Include="Forms\ServerBrowser.resx">
       <DependentUpon>ServerBrowser.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="SettingsForm.resx">
+    <EmbeddedResource Include="Forms\SettingsForm.resx">
       <DependentUpon>SettingsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="views\AddDiveView.resx">
